--- a/design_client/design_client/design_client.csproj
+++ b/design_client/design_client/design_client.csproj
@@ -3,7 +3,18 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MaterialDesignThemes" Version="3.1.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="ShowMeTheXAML" Version="1.0.12" />
+    <PackageReference Include="SolidWorks.Interop.sldworks" Version="27.3.0" />
+    <PackageReference Include="SolidWorks.Interop.swconst" Version="27.3.0" />
+  </ItemGroup>
 
 </Project>
